<resources>
    <string name="app_name">Midtermchapter3n4</string>
    <string name="name">Currency covertor with some music</string>
    <string name="canada">Canadian Dollar</string>
    <string name="mexican">RadioButton</string>
    <string name="euro">Euro</string>
    <string name="covert">Covert</string>
    <string name="next">Next</string>
    <string name="mexican_peso">Mexican Peso</string>
    <string name="number">number</string>
</resources>